# reconverse

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cldb.h  cldb.none.C  conv-header.h  convcore.C  convcore.h  converse.h  converse_config.h.in  cpuaffinity.C  queueing.C  queueing.h  quiescence.C  quiescence.h  scheduler.C  temp.cpp  threads.C
.github/workflows/: ci-lci1.yml  ci.yml  clang-format.yaml
boost-context/: tail_ontop_ppc32_sysv.cpp
cmake_modules/: AddReconverse.cmake  FindHWLOC.cmake
comm_backend/: comm_backend_internal.C  comm_backend_internal.h
examples/: CMakeLists.txt  run_standalone_test.cmake
examples/broadcast/: CMakeLists.txt  Makefile  broadcast.C  broadcast.cpp
examples/commbench/: CMakeLists.txt  Makefile  commbench.C  commbench.h  memoryAccess.C  pingpong.C  timer.C
examples/conds/: CMakeLists.txt  Makefile  conds.cpp
examples/cth/: CMakeLists.txt  pgm.C  pgm.cpp
examples/ctv/: CMakeLists.txt
examples/group/: CMakeLists.txt  Makefile  group.C  group.cpp
examples/idle/: CMakeLists.txt  Makefile  idle.C  idle.cpp
examples/kNeighbors/: CMakeLists.txt  Makefile  kNeighbors.C  kNeighbors.cpp
examples/orig-converse/pingpong/: CMakeLists.txt  Makefile  pingpong.cpp  pingpong_multipairs.cpp
examples/ping_ack/: CMakeLists.txt  Makefile  ping.C  ping.c  ping.cpp
examples/random/: CMakeLists.txt  Makefile  random_test.C  random_test.cpp
examples/rdma_pingpong/: CMakeLists.txt  pingpong.cpp
examples/reduction/: CMakeLists.txt  Makefile  reduction.C  reduction.cpp
examples/reduction_dual/: CMakeLists.txt  Makefile  reduction_dual.cpp
examples/reduction_node/: CMakeLists.txt  reduction.cpp
examples/ring/: CMakeLists.txt  Makefile  ring.C  ring.cpp
examples/self_send/: CMakeLists.txt  self_send.cpp
examples/standalone_project/: CMakeLists.txt  broadcast.cpp
examples/startup/: CMakeLists.txt  Makefile  startup.C  startup.cpp
examples/taskqueue/: CMakeLists.txt  Makefile  taskqueue.cpp
examples/within-node-bcast/: CMakeLists.txt  Makefile  wnbcast.C  wnbcast.cpp
include/: CMakeLists.txt  charm-api.h  charm-config.h  cmirdmautils.h  cmishmem.h  conv-rdma.h  converse.h  taskqueue.h
src/: CMakeLists.txt  barrier.h  cldb.C  cldb.cpp  cldb.h  cldb.none.C  cldb.none.cpp  cldb.rand.cpp  cldb.workstealing.cpp  cmi-shmem-common.h  cmirdmautils.cpp  cmishm.cpp  cmishmem.cpp  cmishmem.h  cmixpmem.cpp  collectives.cpp  concurrentqueue.h  conv-conds.cpp  conv-rdma.cpp  conv-rdma.h  conv-taskQ.cpp  conv-taskQ.h  conv-taskq.cpp  conv-taskq.h  conv-topology.cpp  conv-topology.h  convcore.C  convcore.cpp  converse_config.h.in  converse_internal.h  cpuaffinity.C  cpuaffinity.cpp  mempool.C  mempool.h  msgmgr.cpp  queue.cpp  queue.h  queueing.cpp  random.cpp  scheduler.C  (+7 more)
src/comm_backend/: CMakeLists.txt  comm_backend.h  comm_backend_internal.C  comm_backend_internal.cpp  comm_backend_internal.h
src/comm_backend/lci1/: comm_backend_lci1.C  comm_backend_lci1.cpp  comm_backend_lci1.h
src/comm_backend/lci2/: CMakeLists.txt  comm_backend_lci2.C  comm_backend_lci2.cpp  comm_backend_lci2.h
src/comm_backend/lcw/: CMakeLists.txt  comm_backend_lcw.cpp  comm_backend_lcw.h
src/conv-ccs/: ccs-auth.cpp  ccs-builtins.cpp  ccs-client.cpp  conv-ccs.cpp  conv-ccs.h  middle-ccs.cpp  sockRoutines.cpp  sockRoutines.h
src/pup/: pup.h  pup_c.h  pup_toNetwork.C  pup_util.C
test/: CMakeLists.txt  barrier.C  barrier.cpp  queue.C  queue.cpp
tests/: CMakeLists.txt
tests/broadcast/: broadcast.cpp
tests/conds/: CMakeLists.txt  conds.cpp
tests/cth/: CMakeLists.txt
tests/ctv/: pgm.cpp
tests/decrement_bcast/: CMakeLists.txt  decrement_bcast.cpp
tests/decrement_enqueue/: CMakeLists.txt  decrement_enqueue.cpp
tests/group/: group.cpp
tests/idle/: idle.cpp
tests/orig-converse/pingpong/: CMakeLists.txt  pingpong.cpp  pingpong_lci.cpp  pingpong_multipairs.cpp
tests/physical_nodes/: CMakeLists.txt  physical_nodes.cpp
tests/ping_ack/: ping.cpp
tests/pup_test/: CMakeLists.txt  pup_test.cpp
tests/rdma_ping/: CMakeLists.txt  ping.cpp
tests/rdma_pingpong/: pingpong.cpp
tests/rdma_pingpong_device/: CMakeLists.txt  pingpong_device.cpp
tests/reduction/: reduction.cpp
tests/reduction_dual/: reduction_dual.cpp
tests/reduction_node/: CMakeLists.txt  reduction.cpp
tests/ring/: CMakeLists.txt  ring.cpp
tests/self_send/: self_send.cpp
tests/standalone_project/: CMakeLists.txt  broadcast.cpp
tests/startup/: startup.cpp
tests/task_queue/: CMakeLists.txt  task_queue.cpp
tests/within-node-bcast/: wnbcast.cpp
